3rd Modelo BD listo V1 en SQL

--- a/avengers/appsettings.json
+++ b/avengers/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=Marvel;Integrated Security=True"
+    "DefaultConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Marvel;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
@@ -29,9 +29,12 @@
  * Add-Migration y le ponemos un nombre a la migración, yo le voy a poner Initial, quedando:
  * Add-Migration Initial
  * 
- * Nota: Para deshacer la migración, se utiliza el comando: Remove-Migration
+ * Nota: Para deshacer la migración, se utiliza el comando: Remove-Migration.
  * 
  * Como la base de datos no existe, EF Core la crea utilizando el comando: Update-Database
+ *
+ * Nota: Para revertir la última migración aplicada escribir: Update-Database <nombre-migracion-anterior>
+ * luego remover del proyecto el archivo de la migración y por último, escribir: Remove-Migration
  * 
  * Por medio del Explorador de Objetos de SQL Server se puede observar que se ha creado la base de datos
  * Marvel y la tabla AvengerItems con sus respectiva columnas (Id y Name). Ahora, lo que vamos a hacer
