--- a/avengers/avengers-DESKTOP-65ML5T7.csproj
+++ b/avengers/avengers-DESKTOP-65ML5T7.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DataTransferObjects\" />
+    <Folder Include="DTO\" />
   </ItemGroup>
 
 </Project>
