--- a/avengers/appsettings.json
+++ b/avengers/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Marvel;Integrated Security=True"
-    "DefaultConnectionString": "Data Source=MJ021KNV;Initial Catalog=Marvel;Integrated Security=True"
+    "DefaultConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Marvel;Integrated Security=True"
+    //"DefaultConnectionString": "Data Source=MJ021KNV;Initial Catalog=Marvel;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
