--- a/avengers/avengers.csproj
+++ b/avengers/avengers.csproj
@@ -6,6 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DataTransferObjects\**" />
+    <Compile Remove="DTO\**" />
+    <Content Remove="DataTransferObjects\**" />
+    <Content Remove="DTO\**" />
+    <EmbeddedResource Remove="DataTransferObjects\**" />
+    <EmbeddedResource Remove="DTO\**" />
+    <None Remove="DataTransferObjects\**" />
+    <None Remove="DTO\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
@@ -13,11 +24,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="DataTransferObjects\" />
   </ItemGroup>
 
 </Project>
